# rust-playground

./: .gitignore  README.md
crates/async-req-caching/: Cargo.toml  README.md  rustfmt.toml
crates/async-req-caching/src/: cache.rs  data.rs  diag.rs  doom.rs  lib.rs  main.rs
crates/async-req-caching/src/error/: cached_error.rs  mod.rs  report_error.rs
crates/async-req-caching/src/handler/: mod.rs  root.rs
crates/async-worker/: Cargo.toml  README.md
crates/async-worker/src/: diag.rs  http.rs  lib.rs  main.rs  routes.rs  types.rs  worker.rs
crates/aws-hello/: Cargo.toml  README.md  rustfmt.toml
crates/aws-hello/src/: hello.rs
crates/aws-hello/tests/api/: main.rs
crates/aws-lambda-fun/: Cargo.toml  README.md  template.yaml
crates/aws-lambda-fun/tests/api/: main.rs
crates/aws-lambda-url/: Cargo.toml  README.md  template.yaml
crates/aws-lambda-url/src/: types.rs
crates/event-loop/: Cargo.toml  README.md
crates/event-loop/src/: cli.rs  effects.rs  global_state.rs  instr.rs  lib.rs  main.rs  message.rs
crates/pat-nvi/: Cargo.toml  README.md
crates/pat-nvi/src/: lib.rs  main.rs
crates/pat-nvi/src/nvi/: mod.rs  nvi_impl.rs
crates/traits-gats/: Cargo.toml  README.md  rustfmt.toml
crates/traits-gats/src/: lib.rs  lt_gat.rs  main.rs
crates/traits-not-sync/: Cargo.toml
crates/traits-not-sync/src/: main.rs
