[package]
name = "async-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# HTTP Framework
axum = "0.5.1"

# Async Runtime
tokio = { version = "1.17.0", features = ["full"] }

# Tracing
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tracing-tree = "0.2.0"
