[package]
name = "alf"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.5.1"
# lambda_runtime = "0.5.1"
# serde = { version = "1.0.136", features = ["derive"] }
# serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
# tracing = "0.1.32"
# tracing-subscriber = "0.3.9"
